--- a/Tomi_webpage/index.html
+++ b/Tomi_webpage/index.html
@@ -204,20 +204,25 @@
             <div class="row">
                 <div class="col span-1-of-2">
                     <ul class="footer_nav">
-                        <li><a href="#"><i class="#"></i></a></li>
-                        <li><a href="#"><i class="#"></i></a></li>
-                        <li><a href="#"><i class="#"></i></a></li>
-                        <li><a href="#"><i class="#"></i></a></li>
+                        <li><a href="#">Domov<i class="#"></i></a></li>
+                        <li><a href="#">O mne<i class="#"></i></a></li>
+                        <li><a href="#">Viac<i class="#"></i></a></li>
+                        <li><a href="#">Kontakt<i class="#"></i></a></li>
                     </ul>
                 </div>
                 <div class="col span-1-of-2">
-                    <ul div="social_net">
-                        <li><a href="#"><i class="ion-social-facebook"></i></a></li>
+                    <ul class="social_links">
+                        <li><a href="https://www.facebook.com/Tomi-interier-659260180876479/"><i class="ion-social-facebook"></i></a></li>
                         <li><a href="#"><i class="ion-social-google"></i></a></li>
                         <li><a href="#"><i class="ion-social-skype"></i></a></li>
                         <li><a href="#"><i class="ion-social-pinterest"></i></a></li>
                     </ul>
                 </div>
+            </div>
+            <div class="row">
+                <p>
+                Copyright &copy; 2018 by TomiInterier. All rights reserved.
+                </p>
             </div>
         </footer>
         
